# test

./: CMakeLists.txt  package.xml
include/: WirelessReceiverPlugin.hh  WirelessTransceiverPlugin.hh  WirelessTransmitterPlugin.hh
launch/: rfid_test.launch
listener/: listener.cc
models/receiver/: model.config  model.sdf
models/transmitter/: model.config  model.sdf
src/: WirelessReceiverPlugin.cc  WirelessTransceiverPlugin.cc  WirelessTransmitterPlugin.cc
worlds/: rfid_test.world
